<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DWeather</string>
    <string name="defaultCity">Seattle WA</string>
    <string name="go">Go</string>
    <string name="wind">Wind</string>
    <string name="current">Currently</string>
    <string name="dayText">day</string>
    <string name="inC">in °C</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="currentLocationText">Use current location</string>
    <string name="title_activity_about">About</string>
    <string name="weatherLabelString">Weather for city:</string>
    <string name="WUndergroundDesc">WUnderground logo</string>
    <string name="weatherLabelText">Weather data provided by:</string>
    <string name="providerAuthority">com.mason.doug.weather.WeatherProvider</string>

</resources>