<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout 
     xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:orientation="vertical"
        xmlns:tools="http://schemas.android.com/tools">

        <TextView
            android:id="@+id/currentForecastLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/current"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="14sp" />
           	<TextView
            android:id="@+id/currentConditionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/currentForecastLabel"
            android:layout_alignBaseline="@+id/currentForecastLabel"
            android:textStyle="italic"
            android:paddingLeft="15sp"
            android:text="Condition Text"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/currentImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/currentForecastLabel"
            android:src="@drawable/ic_launcher" />
        
     	<TextView
            android:id="@+id/currentWindText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12sp"
            android:layout_marginTop="5sp"
            android:layout_below="@+id/currentConditionText"
            android:layout_toRightOf="@+id/currentImage"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/wind"
            android:textSize="12sp" />
        
         <TextView
             android:id="@+id/currentHumidityText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/currentWindText"
             android:layout_marginLeft="12sp"
             android:layout_toRightOf="@+id/currentImage"
             android:layout_marginTop="10sp"
             android:text="Humidity"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textSize="12sp"
             tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/currentDegreeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="currentDegreeText"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/currentDayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/currentImage"
            android:layout_alignParentRight="true"
            android:text="@string/dayText"
            android:textSize="14sp"
             />

    </RelativeLayout>